[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/CloudEnemy.gd" type="Script" id=1]
[ext_resource path="res://Graphic/clouds/Assety_-03.png" type="Texture" id=2]
[ext_resource path="res://Graphic/clouds/Assety_-04.png" type="Texture" id=3]
[ext_resource path="res://Graphic/clouds/Assety_-05.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Utils/SwipeDetector.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "cloud_white",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "cloud_dark",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "cloud_dark_big",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 54.1643
height = 126.675

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 379.387, 133.484 )

[sub_resource type="Animation" id=4]

resource_name = "Fade_out"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroy"
} ]
}

[node name="Cloud" type="RigidBody2D" groups=[
"Enemy",
]]

input_pickable = true
collision_layer = 2
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 3
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 1.0
angular_velocity = 0.0
angular_damp = 2.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Pickable", "Visibility" ]
impulse_value_x = 400.0
impulse_value_y = -15

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "cloud_dark"
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="1"]

rect = Rect2( -10, -10, 20, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( -1.7605, -6.60193 )
rotation = 1.5708
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="TouchArea" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 32
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea" index="0"]

position = Vector2( -1.47018, -1.36762 )
scale = Vector2( 1, 0.911214 )
shape = SubResource( 3 )

[node name="SwipeDetector" parent="." index="4" instance=ExtResource( 5 )]

position = Vector2( 0, -0.174824 )

[node name="Timer" parent="SwipeDetector" index="0"]

wait_time = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Fade_out = SubResource( 4 )
blend_times = [  ]

[connection signal="body_entered" from="." to="." method="_on_Cloud_body_entered"]

[connection signal="body_shape_entered" from="." to="." method="_on_Cloud_body_shape_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="input_event" from="TouchArea" to="SwipeDetector" method="_on_TouchArea_input_event"]

[connection signal="swiped" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped"]


[editable path="SwipeDetector"]
